--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lucide-react": "^0.294.0",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^8.14.3",
+    "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
