--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
     "pixi-live2d-display": "^0.4.0",
